image diets, remove extras to get image size down

--- a/azure/Dockerfile
+++ b/azure/Dockerfile
@@ -6,5 +6,5 @@ USER etluser
 
 COPY ./requirements.txt /tmp/requirements.txt
 WORKDIR /tmp
-RUN pip install --no-cache-dir --user wheel \
-    && pip install --no-cache-dir --user -r requirements.txt
+RUN pip install --compile --no-cache-dir --user wheel \
+    && pip install --compile --no-cache-dir --user -r requirements.txt
