--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -8,7 +8,7 @@ RUN mkdir -p /home/jovyan \
 
 RUN mkdir -p /usr/share/man/man1 \
     && apt-get update \ 
-    && DEBIAN_FRONTEND=noninteractive apt-get -yq install openjdk-11-jre-headless \
+    && DEBIAN_FRONTEND=noninteractive apt-get -yq --no-install-recommends install openjdk-11-jre-headless \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && java -version
@@ -17,8 +17,8 @@ USER etluser
 
 COPY ./requirements.txt /tmp/requirements.txt
 WORKDIR /tmp
-RUN pip install --no-cache-dir --user wheel \
-    && pip install --no-cache-dir --user -r requirements.txt
+RUN pip install --compile --no-cache-dir --user wheel \
+    && pip install --compile --no-cache-dir --user -r requirements.txt
 
 WORKDIR /home/jovyan
 CMD ["jupyter", "lab", "--no-browser", "--ip=0.0.0.0", "--NotebookApp.token=", "--NotebookApp.password="]
